# regent

./: Cargo.toml  README.md  index.html  rustfmt.toml  style.css  syntax-highlighting.js  wip.md
crates/regent/: Cargo.toml
crates/regent-internals/: Cargo.toml  README.md  build.rs
crates/regent-internals/src/: checks.rs  enum.rs  forms.rs  lib.rs  on_enum.rs  on_struct.rs  prelude.rs  receiver.rs  sig.rs  struct.rs  sum.rs  uint.rs  width.rs
crates/regent-internals/src/forms/: enum.rs  struct.rs
crates/regent-internals/src/forms/struct/: endec.rs  field.rs  repr.rs
crates/regent-internals/src/prelude/: checks.rs  error.rs  output.rs  sum.rs  syn_utils.rs  ty.rs  uint.rs
crates/regent-internals/src/prelude/syn_utils/: arg.rs  expr.rs  ident.rs  path.rs  ty.rs
crates/regent-internals/src/prelude/ty/: elem.rs  prime.rs  uint.rs
crates/regent-internals/src/struct/: field.rs
crates/regent-internals/src/struct/field/: elem.rs
crates/regent-tests/: Cargo.toml
crates/regent-tests/src/: main.rs
crates/regent/examples/: timestamp.rs
crates/regent/src/: lib.rs  spec.rs
crates/regent/src/spec/: enum.rs  struct.rs
crates/regent/tests/: tests.rs
crates/regent/tests/fail/: duplicate-attr-args.rs  duplicate-attr-args.stderr  enum-variant-fields.rs  enum-variant-fields.stderr  mutually-exclusive-attr-args.rs  mutually-exclusive-attr-args.stderr  non-ident-attr-arg.rs  non-ident-attr-arg.stderr  non-increasing-enum-discrims.rs  non-increasing-enum-discrims.stderr  non-integer-enum-discrim.rs  non-integer-enum-discrim.stderr  unsupported-attr-arg.rs  unsupported-attr-arg.stderr  unsupported-item.rs  unsupported-item.stderr  void-enum.rs  void-enum.stderr
crates/regent/tests/pass/: enum.expanded.rs  enum.rs  struct.rs
