# SPDX-License-Identifier: MPL-2.0

[package]
name = "regent-internals"
version = "0.2.0"
authors = ["norepimorphism <norepi@protonmail.com>"]
edition = "2021"
description = "Proc macro counterpart to the regent crate"
repository = "https://github.com/norepimorphism/regent"
license = "MPL-2.0"

[lib]
proc-macro = true

[features]
default = []
nightly = []

[dependencies]
proc-macro2 = "1.0.53"
syn = { version = "2.0", features = ["full", "printing"] }
