# SPDX-License-Identifier: MPL-2.0

[package]
name = "regent-tests"
version = "0.1.0"
authors = ["norepimorphism <norepi@protonmail.com>"]
edition = "2021"
readme = false
repository = "https://github.com/norepimorphism/noctane"
license = "MPL-2.0"
publish = false

[dependencies]
regent = { path = "../regent" }
