# SPDX-License-Identifier: MPL-2.0

[package]
name = "regent"
version = "0.1.0"
authors = ["norepimorphism <norepi@protonmail.com>"]
edition = "2021"
description = "Bitfields in Rust"
readme.workspace = true
repository = "https://github.com/norepimorphism/regent"
license = "MPL-2.0"
keywords = ["bitfield"]
categories = ["data-structures", "encoding"]

[dependencies]
regent-internals = { path = "../regent-internals" }
