# SPDX-License-Identifier: MPL-2.0

[package]
name = "regent"
version = "0.2.0"
authors = ["norepimorphism <norepi@protonmail.com>"]
edition = "2021"
description = "Bitfields in Rust"
readme.workspace = true
repository = "https://github.com/norepimorphism/regent"
license = "MPL-2.0"
keywords = ["bitfield"]
categories = ["data-structures", "encoding"]

[features]
default = []
nightly = ["regent-internals/nightly"]

[dependencies]
regent-internals = { path = "../regent-internals", version = "0.2.0" }

[dev-dependencies]
macrotest = "1.0"
trybuild = "1.0"
